--- a/scribbler-global.css
+++ b/scribbler-global.css
@@ -318,7 +318,7 @@ table td:first-child {
 
 .footer {
   text-align: center;
-  background-color: var(--primary-color);
+  background-color: #191970;
   padding: 2rem;
   color: white;
 }
