--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,8 @@ a:hover {
   text-decoration: underline;
 }
 
+
+
 a:not([href]):not([class]) {
   color: inherit;
   text-decoration: none;
@@ -10069,11 +10071,11 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #676d74;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
-  margin-right: 1.5rem;
+  margin-right: 1;
 }
 .social-icons .social-icon:last-child {
   margin-right: 0;
