--- a/css/styles.css
+++ b/css/styles.css
@@ -365,16 +365,17 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 30px;
   color: #343a40;
 }
 
 h1, .h1 {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 h2, .h2 {
-  font-size: 3.5rem;
+  font-size: 30px;
+  color: #bb3385;
 }
 
 h3, .h3 {
@@ -394,7 +395,7 @@ h6, .h6 {
 }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 15px;
   font-weight: 300;
 }
 
@@ -7477,7 +7478,7 @@ button.bg-dark:focus {
 }
 
 .m-0 {
-  margin: 4 !important;
+  margin: 0 !important;
   
 }
 
@@ -7614,6 +7615,7 @@ button.bg-dark:focus {
 .mb-5,
 .my-5 {
   margin-bottom: 1rem !important;
+  
 }
 
 .ml-5,
@@ -10007,7 +10009,7 @@ h1 {
 }
 
 p.lead {
-  font-size: 1.15rem;
+  font-size: 15px;
   font-weight: 400;
 }
 
@@ -10076,6 +10078,7 @@ p.lead {
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
+  margin-top: 1rem;
   margin-right: 1;
 }
 .social-icons .social-icon:last-child {
